fix(style): word wrapping (#100)
Presumably it will fix all text wrapping issues on the site.
post page:
- added subheadings
- formatted filenames for download links

--- a/client/src/css/base.scss
+++ b/client/src/css/base.scss
@@ -8,6 +8,7 @@ html {
   font-family: Helvetica, sans-serif;
   padding: 0;
   margin: 0;
+  overflow-wrap: break-word;
 }
 
 *,
